--- a/index.html
+++ b/index.html
@@ -4,48 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Assignments</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            margin: 0;
-            padding: 0;
-            background-color: #f4f4f4;
-            text-align: center;
-        }
-        .container {
-            max-width: 800px;
-            margin: 50px auto;
-            padding: 20px;
-        }
-        h1 {
-            color: #333;
-        }
-        .assignments {
-            display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-            gap: 20px;
-            padding: 20px;
-        }
-        .assignment {
-            background: white;
-            padding: 20px;
-            border-radius: 8px;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-            transition: 0.3s;
-        }
-        .assignment:hover {
-            box-shadow: 0 0 15px rgba(0, 0, 0, 0.2);
-        }
-        .assignment a {
-            text-decoration: none;
-            color: #007bff;
-            font-size: 18px;
-        }
-    </style>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <div class="container">
-        <h1> CSS Assignments</h1>
+        <h1>My Name is Al-Ameen Ameen</h1>
+        <h2>ALT/SOE/024/4743</h2>
+        <p class="subtitle">below are the links to my assignments</p>
         <div class="assignments">
             <div class="assignment"><a href="Assignment1/index.html" >Assignment 1</a></div>
             <div class="assignment"><a href="Assignment2/index.html" >Assignment 2</a></div>
